--- a/game.html
+++ b/game.html
@@ -3,6 +3,15 @@
 <head>
     <meta chrset="UTF 8">
     <title>Number Game</title>
+    <style>
+    div{
+    margin-top: 10px; 
+    margin-bottom: 10px;
+    }
+    #numbers{
+    font-weight:bold;
+    }
+    </style>
 </head>
 <body>
 
@@ -11,9 +20,13 @@
 <h1>Game</h1>
 <div style="display: inline">You have </div><div style="display: inline" id="coins"></div> INR
 <div id="continue">
-<button type="button" onClick="continueGame()" style="margin-top: 10px; margin-bottom: 10px;">Start</button>
+<button type="button" onClick="continueGame()">Start</button>
+</div >
+<div id="numbers">
+<div style="display: inline"  id="a"></div>&nbsp;
+<div style="display: inline" id="b"></div>&nbsp;
+<div style="display: inline" id="c"></div>
 </div>
-<b><div style="display: inline"  id="a"></div>&nbsp;<div style="display: inline" id="b"></div>&nbsp;<div style="display: inline" id="c"></div></b>
 <div id="game_over">Game Over
 </div>
 <div id="message"></div>    
@@ -77,6 +90,7 @@ function continueGame() {
 			//hide start button and show game over.
 			document.getElementById('continue').style.display='none';
 			document.getElementById('game_over').style.display='block';
+			document.getElementById('message').style.display='none';
 		}
 		if(lucky==false)
 		{
